--- a/ANALYSIS/APIS.ipynb
+++ b/ANALYSIS/APIS.ipynb
@@ -60,7 +60,7 @@
    "id": "f8d161cd",
    "metadata": {},
    "source": [
-    "##### Geocode Api de Compañía de Madrid"
+    "##### Geocode Api from Madrid's Company"
    ]
   },
   {
@@ -222,7 +222,7 @@
    "id": "a5c61981",
    "metadata": {},
    "source": [
-    "##### Geocode Api de Compañía de Madrid la más cerca"
+    "##### Geocode Api from Madrid's company, the nearest"
    ]
   },
   {
@@ -2453,22 +2453,6 @@
    "source": [
     "r10.json()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "daa5d3d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b92facc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
